tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_java_field_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "public class Person {\n    private String name;\n    private int age;\n    private static final String DEFAULT_COUNTRY = \"Unknown\";\n    public boolean isActive;\n\n    public Person(String name, int age) {\n        this.name = name;\n        this.age = age;\n        this.isActive = true;\n    }\n\n    public String getName() {\n        return name;\n    }\n\n    public int getAge() {\n        return age;\n    }\n}",
      "end_line": 20,
      "language": "java",
      "name": "Person",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "    private String name;",
      "end_line": 2,
      "language": "java",
      "name": "name",
      "original_indentation": 4,
      "start_line": 2
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "    private int age;",
      "end_line": 3,
      "language": "java",
      "name": "age",
      "original_indentation": 4,
      "start_line": 3
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "    private static final String DEFAULT_COUNTRY = \"Unknown\";",
      "end_line": 4,
      "language": "java",
      "name": "DEFAULT_COUNTRY",
      "original_indentation": 4,
      "start_line": 4
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "    public boolean isActive;",
      "end_line": 5,
      "language": "java",
      "name": "isActive",
      "original_indentation": 4,
      "start_line": 5
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "    public Person(String name, int age) {\n        this.name = name;\n        this.age = age;\n        this.isActive = true;\n    }",
      "end_line": 11,
      "language": "java",
      "name": "Person",
      "original_indentation": 4,
      "start_line": 7
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "    public String getName() {\n        return name;\n    }",
      "end_line": 15,
      "language": "java",
      "name": "getName",
      "original_indentation": 4,
      "start_line": 13
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "    public int getAge() {\n        return age;\n    }",
      "end_line": 19,
      "language": "java",
      "name": "getAge",
      "original_indentation": 4,
      "start_line": 17
    }
  ],
  "source_code": "public class Person {\n    private String name;\n    private int age;\n    private static final String DEFAULT_COUNTRY = \"Unknown\";\n    public boolean isActive;\n\n    public Person(String name, int age) {\n        this.name = name;\n        this.age = age;\n        this.isActive = true;\n    }\n\n    public String getName() {\n        return name;\n    }\n\n    public int getAge() {\n        return age;\n    }\n}",
  "test_name": "test_java_field_extraction",
  "total_chunks": 8
}
