tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_javascript_arrow_function_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nconst add = (a, b) => a + b;\n\nconst multiply = (x, y) => {\n    return x * y;\n};\n\nconst processData = async (data) => {\n    const processed = data.map(item => item.value);\n    return processed;\n};\n",
      "end_line": 11,
      "language": "javascript",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "const add = (a, b) => a + b",
      "end_line": 2,
      "language": "javascript",
      "name": "add",
      "original_indentation": 6,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "const multiply = (x, y) => {\n    return x * y;\n}",
      "end_line": 6,
      "language": "javascript",
      "name": "multiply",
      "original_indentation": 6,
      "start_line": 4
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "const processData = async (data) => {\n    const processed = data.map(item => item.value);\n    return processed;\n}",
      "end_line": 11,
      "language": "javascript",
      "name": "processData",
      "original_indentation": 6,
      "start_line": 8
    }
  ],
  "source_code": "\nconst add = (a, b) => a + b;\n\nconst multiply = (x, y) => {\n    return x * y;\n};\n\nconst processData = async (data) => {\n    const processed = data.map(item => item.value);\n    return processed;\n};\n",
  "test_name": "test_javascript_arrow_function_extraction",
  "total_chunks": 4
}
