tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_javascript_function_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "function calculateSum(a, b) {\n    return a + b;\n}",
      "end_line": 4,
      "language": "javascript",
      "name": "calculateSum",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "function greetUser(name) {\n    return `Hello, ${name}!`;\n}",
      "end_line": 8,
      "language": "javascript",
      "name": "greetUser",
      "original_indentation": 0,
      "start_line": 6
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "async function fetchUserData(userId) {\n    const response = await fetch(`/api/users/${userId}`);\n    return response.json();\n}",
      "end_line": 13,
      "language": "javascript",
      "name": "fetchUserData",
      "original_indentation": 0,
      "start_line": 10
    }
  ],
  "source_code": "\nfunction calculateSum(a, b) {\n    return a + b;\n}\n\nfunction greetUser(name) {\n    return `Hello, ${name}!`;\n}\n\nasync function fetchUserData(userId) {\n    const response = await fetch(`/api/users/${userId}`);\n    return response.json();\n}\n",
  "test_name": "test_javascript_function_extraction",
  "total_chunks": 3
}
