tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_kotlin_extension_functions.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nfun String.removeWhitespace(): String {\n    return this.replace(\"\\\\s\".toRegex(), \"\")\n}\n\nfun <T> List<T>.second(): T? {\n    return if (this.size >= 2) this[1] else null\n}\n\nfun Int.isEven(): Boolean = this % 2 == 0\n\nclass StringUtils {\n    fun String.capitalize(): String {\n        return this.replaceFirstChar { it.uppercase() }\n    }\n}\n\ninfix fun Int.times(str: String): String {\n    return str.repeat(this)\n}\n",
      "end_line": 20,
      "language": "kotlin",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "fun String.removeWhitespace(): String {\n    return this.replace(\"\\\\s\".toRegex(), \"\")\n}",
      "end_line": 4,
      "language": "kotlin",
      "name": "function",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "fun <T> List<T>.second(): T? {\n    return if (this.size >= 2) this[1] else null\n}",
      "end_line": 8,
      "language": "kotlin",
      "name": "function",
      "original_indentation": 0,
      "start_line": 6
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "fun Int.isEven(): Boolean = this % 2 == 0",
      "end_line": 10,
      "language": "kotlin",
      "name": "function",
      "original_indentation": 0,
      "start_line": 10
    },
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "class StringUtils {\n    fun String.capitalize(): String {\n        return this.replaceFirstChar { it.uppercase() }\n    }\n}",
      "end_line": 16,
      "language": "kotlin",
      "name": "class",
      "original_indentation": 0,
      "start_line": 12
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    fun String.capitalize(): String {\n        return this.replaceFirstChar { it.uppercase() }\n    }",
      "end_line": 15,
      "language": "kotlin",
      "name": "function",
      "original_indentation": 4,
      "start_line": 13
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "infix fun Int.times(str: String): String {\n    return str.repeat(this)\n}",
      "end_line": 20,
      "language": "kotlin",
      "name": "function",
      "original_indentation": 0,
      "start_line": 18
    }
  ],
  "source_code": "\nfun String.removeWhitespace(): String {\n    return this.replace(\"\\\\s\".toRegex(), \"\")\n}\n\nfun <T> List<T>.second(): T? {\n    return if (this.size >= 2) this[1] else null\n}\n\nfun Int.isEven(): Boolean = this % 2 == 0\n\nclass StringUtils {\n    fun String.capitalize(): String {\n        return this.replaceFirstChar { it.uppercase() }\n    }\n}\n\ninfix fun Int.times(str: String): String {\n    return str.repeat(this)\n}\n",
  "test_name": "test_kotlin_extension_functions",
  "total_chunks": 7
}
