tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_kotlin_object_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nobject DatabaseHelper {\n    const val DB_NAME = \"app.db\"\n\n    fun connect(): String {\n        return \"Connected to $DB_NAME\"\n    }\n\n    fun disconnect() {\n        println(\"Disconnected from database\")\n    }\n}\n\nobject Utils {\n    fun formatName(name: String): String {\n        return name.trim().lowercase()\n    }\n}\n",
      "end_line": 18,
      "language": "kotlin",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "object DatabaseHelper {\n    const val DB_NAME = \"app.db\"\n\n    fun connect(): String {\n        return \"Connected to $DB_NAME\"\n    }\n\n    fun disconnect() {\n        println(\"Disconnected from database\")\n    }\n}",
      "end_line": 12,
      "language": "kotlin",
      "name": "DatabaseHelper",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "    const val DB_NAME = \"app.db\"",
      "end_line": 3,
      "language": "kotlin",
      "name": "unknown",
      "original_indentation": 4,
      "start_line": 3
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    fun connect(): String {\n        return \"Connected to $DB_NAME\"\n    }",
      "end_line": 7,
      "language": "kotlin",
      "name": "connect",
      "original_indentation": 4,
      "start_line": 5
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    fun disconnect() {\n        println(\"Disconnected from database\")\n    }",
      "end_line": 11,
      "language": "kotlin",
      "name": "disconnect",
      "original_indentation": 4,
      "start_line": 9
    },
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "object Utils {\n    fun formatName(name: String): String {\n        return name.trim().lowercase()\n    }\n}",
      "end_line": 18,
      "language": "kotlin",
      "name": "Utils",
      "original_indentation": 0,
      "start_line": 14
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    fun formatName(name: String): String {\n        return name.trim().lowercase()\n    }",
      "end_line": 17,
      "language": "kotlin",
      "name": "formatName",
      "original_indentation": 4,
      "start_line": 15
    }
  ],
  "source_code": "\nobject DatabaseHelper {\n    const val DB_NAME = \"app.db\"\n\n    fun connect(): String {\n        return \"Connected to $DB_NAME\"\n    }\n\n    fun disconnect() {\n        println(\"Disconnected from database\")\n    }\n}\n\nobject Utils {\n    fun formatName(name: String): String {\n        return name.trim().lowercase()\n    }\n}\n",
  "test_name": "test_kotlin_object_extraction",
  "total_chunks": 7
}
