tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_php_class_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "class Person {\n    private $name;\n    private $age;\n\n    public function __construct($name, $age) {\n        $this->name = $name;\n        $this->age = $age;\n    }\n\n    public function greet() {\n        return \"Hello, I'm \" . $this->name . \"!\";\n    }\n\n    public function getAge() {\n        return $this->age;\n    }\n}",
      "end_line": 19,
      "language": "php",
      "name": "Person",
      "original_indentation": 0,
      "start_line": 3
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    public function __construct($name, $age) {\n        $this->name = $name;\n        $this->age = $age;\n    }",
      "end_line": 10,
      "language": "php",
      "name": "__construct",
      "original_indentation": 4,
      "start_line": 7
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    public function greet() {\n        return \"Hello, I'm \" . $this->name . \"!\";\n    }",
      "end_line": 14,
      "language": "php",
      "name": "greet",
      "original_indentation": 4,
      "start_line": 12
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    public function getAge() {\n        return $this->age;\n    }",
      "end_line": 18,
      "language": "php",
      "name": "getAge",
      "original_indentation": 4,
      "start_line": 16
    },
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "class Calculator {\n    public function add($a, $b) {\n        return $a + $b;\n    }\n\n    public function multiply($a, $b) {\n        return $a * $b;\n    }\n}",
      "end_line": 29,
      "language": "php",
      "name": "Calculator",
      "original_indentation": 0,
      "start_line": 21
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    public function add($a, $b) {\n        return $a + $b;\n    }",
      "end_line": 24,
      "language": "php",
      "name": "add",
      "original_indentation": 4,
      "start_line": 22
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    public function multiply($a, $b) {\n        return $a * $b;\n    }",
      "end_line": 28,
      "language": "php",
      "name": "multiply",
      "original_indentation": 4,
      "start_line": 26
    }
  ],
  "source_code": "<?php\n\nclass Person {\n    private $name;\n    private $age;\n\n    public function __construct($name, $age) {\n        $this->name = $name;\n        $this->age = $age;\n    }\n\n    public function greet() {\n        return \"Hello, I'm \" . $this->name . \"!\";\n    }\n\n    public function getAge() {\n        return $this->age;\n    }\n}\n\nclass Calculator {\n    public function add($a, $b) {\n        return $a + $b;\n    }\n\n    public function multiply($a, $b) {\n        return $a * $b;\n    }\n}\n\n?>",
  "test_name": "test_php_class_extraction",
  "total_chunks": 7
}
